Fix graph size and overflow

--- a/src/graph/graph.css
+++ b/src/graph/graph.css
@@ -566,6 +566,9 @@ div.multiple-input:has(input[disabled]),input[disabled] {
     display: flex;
     flex-direction: row;
     visibility: hidden;
+    position: absolute;
+    width: fit-content;
+    padding-right: 0.8em;
 }
 
 #add-link-message .message {
